--- a/style.css
+++ b/style.css
@@ -72,22 +72,6 @@ body, html {
     background-color: #ffff00;
 }
 
-
-
-.color-text {
-    font-size: 1.5em;
-    text-transform: uppercase;
-    font-family: Arial, sans-serif;
-    font-weight: bold;
-    letter-spacing: 2px;
-    text-align: center;
-    width: 100%;
-    padding: 0 20px;
-    color: white;
-    text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
-    margin-bottom: 40px;
-}
-
 .color-text {
     font-size: 1.5em;
     text-transform: uppercase;
@@ -100,6 +84,7 @@ body, html {
     padding-bottom: 50%;
     color: white;
     text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+    cursor: pointer;
 }
 
 #generate-button {
