--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ body, html {
     color: white;
     text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
     cursor: pointer;
+    border:none;
 }
 
 #generate-button {
